# e3x

./: .environment.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  README.md  init_cla  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
docs/: make.bat  requirements.txt
docs/source/: api.rst  basis_functions.rst  changing_defaults.rst  conf.py  constructing_cartesian_tensors.rst  index.rst  installation.rst  neighbor_lists.rst  overview.rst  pitfalls.rst
docs/source/_static/: tetracubes.html
docs/source/_static/css/: s4defs-roles.css
docs/source/_templates/: config-module-template.rst  main-class-template.rst  main-module-template.rst
docs/source/examples/: md17_ethanol.ipynb  moment_of_inertia.ipynb  tetracubes.ipynb
e3x/: __init__.py  config.py  environment.yaml  util.py  version.py
e3x/matrix/: __init__.py  matmat.py
e3x/nn/: __init__.py  activations.py  features.py  initializers.py  modules.py  wrappers.py
e3x/nn/functions/: __init__.py  bernstein.py  chebyshev.py  cutoff.py  damping.py  gaussian.py  mappings.py  switch.py  trigonometric.py  window.py
e3x/ops/: __init__.py  helpers.py  indexed.py  safe.py
e3x/so3/: __init__.py  _clebsch_gordan_lut.py  _common.py  _delley_grids.npz  _lebedev_grids.npz  _lookup_table_generation_utility.py  _normalization.py  _spherical_harmonics_lut.npz  _spherical_harmonics_lut.py  _symbolic.py  _tensor_conversion_lut.npz  _tensor_conversion_lut.py  _wigner_d_lut.py  irreps.py  quadrature.py  rotations.py
tests/: testing.py
tests/matrix/: matmat_test.py
tests/nn/: activations_test.py  features_test.py  initializers_test.py  modules_test.py  wrappers_test.py
tests/nn/functions/: bernstein_test.py  chebyshev_test.py  cutoff_test.py  damping_test.py  gaussian_test.py  mappings_test.py  switch_test.py  trigonometric_test.py  window_test.py
tests/ops/: helpers_test.py  indexed_test.py  safe_test.py
tests/so3/: _clebsch_gordan_lut_test.py  _common_test.py  _spherical_harmonics_lut_test.py  _symbolic_test.py  _tensor_conversion_lut_test.py  _wigner_d_lut_test.py  irreps_test.py  quadrature_test.py  rotations_test.py
