[project]
name = "e3x"
description = "JAX-Library for building E(3)-equivariant deep learning architectures based on Flax."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "The e3x Authors", email="qcml@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = [
    "equivariance", "equivariant", "invariance", "invariant",
    "E(3)", "SE(3)", "O(3)", "SO(3)",
    "Euclidean", "Orthogonal", "group",
    "translation", "translational",
    "rotation", "rotational",
    "roto-translation", "roto-translational",
    "reflection",
    "neural network", "machine learning", "deep learning",
]

# pip dependencies of the project

dependencies = [
  "absl-py",
  "etils[epath]",
  "flax",
  "jax",
  "jaxtyping",
  "more_itertools",
  "numpy",
  "sympy",
]


# This is set automatically by flit using `e3x.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-research/e3x"
repository = "https://github.com/google-research/e3x"
# Other: `documentation`, `changelog`


[project.optional-dependencies]
# Development deps (unit tests, linting, formatting, documentation, ...)
# Installed through `pip install .[dev]`

dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "yapf",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "nbsphinx",
    "jupyter_sphinx",
    "matplotlib",
]


[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
